fix image height on mobile, remove unecessary classes

--- a/wp-content/themes/disrupt-theme/css/components/_graduate-single.scss
+++ b/wp-content/themes/disrupt-theme/css/components/_graduate-single.scss
@@ -169,6 +169,7 @@
 
         @media (max-width: 500px) {
           max-width: 17.5rem;
+          max-height: 17.5rem;
         }
       }
     }
