--- a/wp-content/themes/disrupt-theme/css/components/_graduates.scss
+++ b/wp-content/themes/disrupt-theme/css/components/_graduates.scss
@@ -227,101 +227,3 @@ body.page-graduates {
     animation-duration: 1s;
   }
 }
-
-// temporary graduate photo classes
-
-.sam {
-  background-image: url('../img/portraits/sam.png');
-}
-
-.meaghan {
-  background-image: url('../img/portraits/meaghan.png');
-}
-
-.anna {
-  background-image: url('../img/portraits/anna.png');
-}
-
-.jimmy {
-  background-image: url('../img/portraits/jimmy.png');
-}
-
-.liv {
-  background-image: url('../img/portraits/liv.png');
-}
-
-.nicole {
-  background-image: url('../img/portraits/nicole.png');
-}
-
-.brooke {
-  background-image: url('../img/portraits/brooke.png');
-}
-
-.douglas {
-  background-image: url('../img/portraits/douglas.png');
-}
-
-.monica {
-  background-image: url('../img/portraits/monica.png');
-}
-
-.mitchell {
-  background-image: url('../img/portraits/mitchell.png');
-}
-
-.bridget {
-  background-image: url('../img/portraits/bridget.png');
-}
-
-.julia {
-  background-image: url('../img/portraits/julia.png');
-}
-
-.unknown2 {
-  background-image: url('../img/portraits/unknown2.png');
-}
-
-.holly {
-  background-image: url('../img/portraits/holly.png');
-}
-
-.adam {
-  background-image: url('../img/portraits/adam.png');
-}
-
-.joelle {
-  background-image: url('../img/portraits/joelle.png');
-}
-
-.eloise {
-  background-image: url('../img/portraits/eloise.png');
-}
-
-.unknown1 {
-  background-image: url('../img/portraits/unknown1.png');
-}
-
-.tori {
-  background-image: url('../img/portraits/tori.png');
-}
-
-.amira {
-  background-image: url('../img/portraits/amira.png');
-}
-
-.caitlin {
-  background-image: url('../img/portraits/caitlin.png');
-}
-
-.jennifer {
-  background-image: url('../img/portraits/jennifer.png');
-}
-
-.lincoln {
-  background-image: url('../img/portraits/lincoln.png');
-}
-
-.nissa {
-  background-image: url('../img/portraits/nissa.png');
-}
